@@ -43,6 +43,13 @@ PAR_BITS  3
 /* USB: SERIAL_STATE
    DSR DCD RI */
 
+/* non-POSIX, non-USB-CDC configs */
+#define MODE_SMARTCARD (1 << 30)
+#define MODE_IRDA      (2 << 30)
+#define MODE_IRDA_LP   (3 << 30)
+#define MASK_MODE      (0x3 << 30)
+/* 0: standard, 1: smartcard, 2: IrDA, 3: IrDA-LP */
+
 struct usart_stat {
   uint8_t dev_no;
 
