@@ -1,3 +1,11 @@
+2019-02-21  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* contrib/usart.h (MODE_SMARTCARD, MODE_IRDA, MODE_IRDA_LP)
+	(MASK_MODE): New.
+
+	* contrib/usart-stm32f103.c (usart_config): Add support for
+	those modes.
+
 2018-12-19  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* VERSION: 1.13.
